<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_book_edit"
    android:paddingTop="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/margin_between_ToolbarAndElements">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/pos_about_tmb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/book_thumbnail"
                        android:scaleType="centerCrop"
                        android:layout_marginRight="@dimen/margin_image_right"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/book_thumbnail_height"
                        android:layout_weight="2" />
                    <Button
                        android:id="@+id/button_add_thumbnail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/add_thumbnail" />
                </LinearLayout>

                <TextView
                    android:paddingTop="@dimen/margin_between_TmbAndElements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_title"/>
                <EditText
                    android:id="@+id/title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
                <TextView
                    android:paddingTop="@dimen/margin_between_LabAndForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"/>
                <EditText
                    android:id="@+id/price_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
                <TextView
                    android:paddingTop="@dimen/margin_between_LabAndForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase_date"/>
                <EditText
                    android:id="@+id/purchase_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="date" />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</LinearLayout>
