<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_book_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:id="@+id/toolbar_bookadd"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <ScrollView
        android:paddingTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/pos_about_tmb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/bookTmb"
                        android:scaleType="centerCrop"
                        android:layout_marginRight="40dp"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="2" />
                    <Button
                        android:id="@+id/button_addtmb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/add_tmb" />
                </LinearLayout>

                <TextView
                    android:paddingTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_title"/>
                <EditText
                    android:id="@+id/titleTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:paddingTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"/>
                <EditText
                    android:id="@+id/priceTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:paddingTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase_date"/>
                <EditText
                    android:id="@+id/purchaseDateTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="date"/>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</LinearLayout>